--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.cdnfonts.com/css/b-bagian" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/wannabeme" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/rogan" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- header -->
-    <header>
+    <div class="main-container">
+    <header> 
         <nav class="nav-bar">
             <img src="./images/logo.svg" alt="">
-            <p>sea monkey</p>
 
+            <hr style="width: 493; color: black; height: 0.6px;">
             <ul class="nav-items">
-                <li>EXPEDITIONS</li>
-                <li>GALLERY</li>
-                <li>FAQ</li>
-                <button class="button">CONTACT</button>
+                <li><a href="#">EXPEDITIONS</a></li>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="#">FAQ</a></li>
+                <a class="button" href="#">CONTACT</a>
             </ul>
         </nav>
+        <video autoplay loop muted class="bg-video" src="./images/ezgif.com-gif-to-webm-converter.webm"></video>
     </header>
+    <section class="main-banner">
+        <div class="container">
+            <div class="banner-text">
+            <h1>Explore</h1>
+            <h3>Untamed Wilderness</h3>
+            <p>Now operating in jordan</p>
+        </div>
+            <div class="form-button">
+                <a href="#">KNOW MORE</a>
+            </div>
+        </div>
+    </section>
+    </div>
 </body>
 </html>
