working in about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,35 +10,55 @@
     <link href="https://fonts.cdnfonts.com/css/rogan" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <!-- header -->
     <div class="main-container">
-    <header> 
-        <nav class="nav-bar">
-            <img src="./images/logo.svg" alt="">
+        <header>
+            <nav class="nav-bar">
+                <img src="./images/logo.svg" alt="">
 
-            <hr style="width: 493; color: black; height: 0.6px;">
-            <ul class="nav-items">
-                <li><a href="#">EXPEDITIONS</a></li>
-                <li><a href="#">GALLERY</a></li>
-                <li><a href="#">FAQ</a></li>
-                <a class="button" href="#">CONTACT</a>
-            </ul>
-        </nav>
-        <video autoplay loop muted class="bg-video" src="./images/ezgif.com-gif-to-webm-converter.webm"></video>
-    </header>
-    <section class="main-banner">
-        <div class="container">
-            <div class="banner-text">
-            <h1>Explore</h1>
-            <h3>Untamed Wilderness</h3>
-            <p>Now operating in jordan</p>
-        </div>
-            <div class="form-button">
-                <a href="#">KNOW MORE</a>
+                <hr style="width: 493; color: black; height: 0.6px;">
+                <ul class="nav-items">
+                    <li><a href="#">EXPEDITIONS</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <a class="button" href="#">CONTACT</a>
+                </ul>
+            </nav>
+            <video autoplay loop muted class="bg-video" src="./images/ezgif.com-gif-to-webm-converter.webm"></video>
+        </header>
+        <section class="main-banner">
+            <div class="container">
+                <div class="banner-text">
+                    <h1>Explore</h1>
+                    <h3>Untamed Wilderness</h3>
+                    <p>Now operating in jordan</p>
+                </div>
+                <div class="form-button">
+                    <a href="#">KNOW MORE</a>
+                </div>
             </div>
+        </section>
+    </div>
+
+    <!-- About -->
+    <section class="about-container">
+    <div class="about">
+        <h3>About</h3>
+        <p>Welcome to SeaMonkey Expeditions, Jordan's Premier Wildlife Experience!</p>
+        <p>At SeaMonkey Expeditions, we are dedicated to showcasing the <br> remarkable wildlife of Jordan. Join us on an
+            unforgettable journey to <br> witness the Arabian Oryx, stunning birds, graceful water buffalos, and <br> thriving
+            marine life. Our passion for nature and commitment to <br> responsible ecotourism ensure an extraordinary
+            adventure you'll <br> cherish forever. Let us guide you through the untouched beauty of <br> Jordan and its
+            diverse ecosystems, while contributing to the <br> conservation efforts that protect these precious species.
+        </p>
+    </div>
+        <div class="about-img">
+            <img src="./images/Couple.png" alt="">
         </div>
     </section>
-    </div>
+
 </body>
+
 </html>
