--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
             </div>
         </section>
     </div>
+    <img src="./images/scratch.img.jpeg" class="scratch-img" alt="">
 
     <!-- About -->
     <section class="about-container">
     <div class="about">
         <h3>About</h3>
-        <p>Welcome to SeaMonkey Expeditions, Jordan's Premier Wildlife Experience!</p>
+        <h4>Welcome to SeaMonkey Expeditions, Jordan's <br> Premier Wildlife Experience!</h4>
         <p>At SeaMonkey Expeditions, we are dedicated to showcasing the <br> remarkable wildlife of Jordan. Join us on an
             unforgettable journey to <br> witness the Arabian Oryx, stunning birds, graceful water buffalos, and <br> thriving
             marine life. Our passion for nature and commitment to <br> responsible ecotourism ensure an extraordinary
@@ -56,6 +57,40 @@
     </div>
         <div class="about-img">
             <img src="./images/Couple.png" alt="">
+        </div>
+    </section>
+
+    <section class="expedition">
+          <div class="expedition-heading">
+            <h3>Expeditions</h3>
+            <p>choose your exploration style</p>
+          </div>
+
+          <img src="./images/CONTOUR LINES.svg" class="expedition-img" alt="">
+        <div class="Trips">
+            <div>
+               <p>All <br> Trips</p>
+            </div>
+            <div>
+                <img src="./images/hiking (traced).svg" alt="">
+               <p>Hiking</p>
+            </div>
+            <div>
+                <img src="./images/camping (traced).svg" alt="">
+               <p>Camping</p>
+            </div>
+            <div>
+                <img src="./images/snorkeling (traced).svg" alt="">
+               <p>Sea safari</p>
+            </div>
+            <div>
+                <img src="./images/safari (traced).svg" alt="">
+               <p>Vechile Safari</p>
+            </div>
+        </div>
+
+        <div class="expedition-imgs">
+            
         </div>
     </section>
 
