--- a/index.html
+++ b/index.html
@@ -88,11 +88,38 @@
                <p>Vechile Safari</p>
             </div>
         </div>
+    </section>
+
 
         <div class="expedition-imgs">
-            
+            <div class="card-row-tripdetails">
+                <div class="hiking-card">
+                    <div>
+                        <a href="">
+                            <img src="./images/card-img-1.png" alt="">
+                        </a>
+                        <div class="card-flex">
+                        <p>Water buffalo & bird watching <br> trek</p>
+                        <p class="card-sec-p">Hiking</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="sea-card">
+                    <div>
+                        <a href="">
+                            <img src="./images/card-img-2.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="hiking-card">
+                    <div>
+                        <a href="">
+                            <img src="./images/card-img-3.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
 
 </body>
 
