card section ongoing

--- a/index.html
+++ b/index.html
@@ -99,9 +99,20 @@
                             <img src="./images/card-img-1.png" alt="">
                         </a>
                         <div class="card-flex">
-                        <p>Water buffalo & bird watching <br> trek</p>
-                        <p class="card-sec-p">Hiking</p>
+                        <h5>Water buffalo & bird watching <br> trek</h5>
+                        <p class="card-sec-p">Hiking</p> <br>
                         </div>
+                        <div class="card-dtls">
+                        <div class="card-dtls-rght">
+                        <img src="./images/carbon_location.svg" class="icons" alt="">
+                        <p>Azraq, Jordan</p>
+                        </div>
+                        <div class="card-dtls-left">
+                        <img src="./images/ph_clock.svg" class="icons" alt="">
+                        <p>3 Hrs</p>
+                        </div>
+                    </div>
+                        <p>Group size: Min 3 - Max 20</p>
                     </div>
                 </div>
                 <div class="sea-card">
