--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 <div class="hiking-card">
                     <div>
                         <a href="">
-                            <img src="./images/card-img-1.png" alt="">
+                            <img src="./images/card-img-1.png" class="first-img" alt="">
                         </a>
                         <div class="card-flex">
                         <h5>Water buffalo & bird watching <br> trek</h5>
-                        <p class="card-sec-p">Hiking</p> <br>
+                        <div class="card-sec-p">Hiking</div> <br>
                         </div>
                         <div class="card-dtls">
                         <div class="card-dtls-rght">
@@ -118,17 +118,51 @@
                 <div class="sea-card">
                     <div>
                         <a href="">
-                            <img src="./images/card-img-2.png" alt="">
+                            <img src="./images/card-img-2.png" class="second-img" alt="">
                         </a>
+                        <div class="card-flex">
+                        <h5>Scuba dive or snorkel the red <br> sea</h5>
+                        <div class="card-sec-p">Sea safari</div> <br>
+                        </div>
+                        <div class="card-dtls">
+                        <div class="card-dtls-rght">
+                        <img src="./images/carbon_location.svg" class="icons" alt="">
+                        <p>Azraq, Jordan</p>
+                        </div>
+                        <div class="card-dtls-left">
+                        <img src="./images/ph_clock.svg" class="icons" alt="">
+                        <p>6 Hrs</p>
+                        </div>
+                    </div>
+                    <p>Group size: -</p>
                     </div>
                 </div>
                 <div class="hiking-card">
                     <div>
                         <a href="">
-                            <img src="./images/card-img-3.png" alt="">
+                            <img src="./images/card-img-3.png" class="third-img" alt="">
                         </a>
+                        <div class="card-flex">
+                            <h5>Hike in the wild</h5>
+                            <div class="card-sec-p-3">Hiking</div> <br>
+                        </div>
+                        <div class="card-dtls">
+                        <div class="card-dtls-rght">
+                        <img src="./images/carbon_location.svg" class="icons" alt="">
+                        <p>Azraq, Jordan</p>
+                        </div>
+                        <div class="card-dtls-left">
+                        <img src="./images/ph_clock.svg" class="icons" alt="">
+                        <p>5 Hrs</p>
+                        </div>
+                    </div>
+                      <p>Group size: Min 6 - Max 20</p>
                     </div>
                 </div>
+            </div>
+
+            <div class="trip-button">
+                <a href="#">VIEW ALL TRIPS</a>
             </div>
         </div>
 
