--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <hr style="width: 493; color: black; height: 0.6px;">
                 <ul class="nav-items">
-                    <li><a href="#">EXPEDITIONS</a></li>
+                    <li><a href="#expedition">EXPEDITIONS</a></li>
                     <li><a href="#">GALLERY</a></li>
                     <li><a href="#">FAQ</a></li>
                     <a class="button" href="#">CONTACT</a>
@@ -45,126 +45,139 @@
 
     <!-- About -->
     <section class="about-container">
-    <div class="about">
-        <h3>About</h3>
-        <h4>Welcome to SeaMonkey Expeditions, Jordan's <br> Premier Wildlife Experience!</h4>
-        <p>At SeaMonkey Expeditions, we are dedicated to showcasing the <br> remarkable wildlife of Jordan. Join us on an
-            unforgettable journey to <br> witness the Arabian Oryx, stunning birds, graceful water buffalos, and <br> thriving
-            marine life. Our passion for nature and commitment to <br> responsible ecotourism ensure an extraordinary
-            adventure you'll <br> cherish forever. Let us guide you through the untouched beauty of <br> Jordan and its
-            diverse ecosystems, while contributing to the <br> conservation efforts that protect these precious species.
-        </p>
-    </div>
+        <div class="about">
+            <h3>About</h3>
+            <h4>Welcome to SeaMonkey Expeditions, Jordan's <br> Premier Wildlife Experience!</h4>
+            <p>At SeaMonkey Expeditions, we are dedicated to showcasing the <br> remarkable wildlife of Jordan. Join us
+                on an
+                unforgettable journey to <br> witness the Arabian Oryx, stunning birds, graceful water buffalos, and
+                <br> thriving
+                marine life. Our passion for nature and commitment to <br> responsible ecotourism ensure an
+                extraordinary
+                adventure you'll <br> cherish forever. Let us guide you through the untouched beauty of <br> Jordan and
+                its
+                diverse ecosystems, while contributing to the <br> conservation efforts that protect these precious
+                species.
+            </p>
+        </div>
         <div class="about-img">
             <img src="./images/Couple.png" alt="">
         </div>
     </section>
 
-    <section class="expedition">
-          <div class="expedition-heading">
+    <section id="expedition" class="expedition">
+        <div class="expedition-heading">
             <h3>Expeditions</h3>
             <p>choose your exploration style</p>
-          </div>
+        </div>
 
-          <img src="./images/CONTOUR LINES.svg" class="expedition-img" alt="">
+        <img src="./images/CONTOUR LINES.svg" class="expedition-img" alt="">
         <div class="Trips">
-            <div>
-               <p>All <br> Trips</p>
+            <div class="all-trip">
+                <p>All <br> Trips</p>
             </div>
             <div>
                 <img src="./images/hiking (traced).svg" alt="">
-               <p>Hiking</p>
+                <p>Hiking</p>
             </div>
             <div>
                 <img src="./images/camping (traced).svg" alt="">
-               <p>Camping</p>
+                <p>Camping</p>
             </div>
             <div>
                 <img src="./images/snorkeling (traced).svg" alt="">
-               <p>Sea safari</p>
+                <p>Sea safari</p>
             </div>
             <div>
                 <img src="./images/safari (traced).svg" alt="">
-               <p>Vechile Safari</p>
+                <p>Vechile Safari</p>
             </div>
         </div>
     </section>
 
 
-        <div class="expedition-imgs">
-            <div class="card-row-tripdetails">
-                <div class="hiking-card">
-                    <div>
-                        <a href="">
-                            <img src="./images/card-img-1.png" class="first-img" alt="">
-                        </a>
-                        <div class="card-flex">
+    <div class="expedition-imgs">
+        <div class="card-row-tripdetails">
+            <div class="hiking-card">
+                <div>
+                    <a href="">
+                        <img src="./images/card-img-1.png" class="first-img" alt="">
+                    </a>
+                    <div class="card-flex">
                         <h5>Water buffalo & bird watching <br> trek</h5>
                         <div class="card-sec-p">Hiking</div> <br>
-                        </div>
-                        <div class="card-dtls">
+                    </div>
+                    <div class="card-dtls">
                         <div class="card-dtls-rght">
-                        <img src="./images/carbon_location.svg" class="icons" alt="">
-                        <p>Azraq, Jordan</p>
+                            <img src="./images/carbon_location.svg" class="icons" alt="">
+                            <p>Azraq, Jordan</p>
                         </div>
                         <div class="card-dtls-left">
-                        <img src="./images/ph_clock.svg" class="icons" alt="">
-                        <p>3 Hrs</p>
+                            <img src="./images/ph_clock.svg" class="icons" alt="">
+                            <p>3 Hrs</p>
                         </div>
                     </div>
-                        <p>Group size: Min 3 - Max 20</p>
-                    </div>
+                    <p>Group size: Min 3 - Max 20</p>
                 </div>
-                <div class="sea-card">
-                    <div>
-                        <a href="">
-                            <img src="./images/card-img-2.png" class="second-img" alt="">
-                        </a>
-                        <div class="card-flex">
+            </div>
+            <div class="sea-card">
+                <div>
+                    <a href="">
+                        <img src="./images/card-img-2.png" class="second-img" alt="">
+                    </a>
+                    <div class="card-flex">
                         <h5>Scuba dive or snorkel the red <br> sea</h5>
                         <div class="card-sec-p">Sea safari</div> <br>
-                        </div>
-                        <div class="card-dtls">
+                    </div>
+                    <div class="card-dtls">
                         <div class="card-dtls-rght">
-                        <img src="./images/carbon_location.svg" class="icons" alt="">
-                        <p>Azraq, Jordan</p>
+                            <img src="./images/carbon_location.svg" class="icons" alt="">
+                            <p>Azraq, Jordan</p>
                         </div>
                         <div class="card-dtls-left">
-                        <img src="./images/ph_clock.svg" class="icons" alt="">
-                        <p>6 Hrs</p>
+                            <img src="./images/ph_clock.svg" class="icons" alt="">
+                            <p>6 Hrs</p>
                         </div>
                     </div>
                     <p>Group size: -</p>
-                    </div>
                 </div>
-                <div class="hiking-card">
-                    <div>
-                        <a href="">
-                            <img src="./images/card-img-3.png" class="third-img" alt="">
-                        </a>
-                        <div class="card-flex">
-                            <h5>Hike in the wild</h5>
-                            <div class="card-sec-p-3">Hiking</div> <br>
-                        </div>
-                        <div class="card-dtls">
+            </div>
+            <div class="hiking-card">
+                <div>
+                    <a href="">
+                        <img src="./images/card-img-3.png" class="third-img" alt="">
+                    </a>
+                    <div class="card-flex">
+                        <h5>Hike in the wild</h5>
+                        <div class="card-sec-p-3">Hiking</div> <br>
+                    </div>
+                    <div class="card-dtls">
                         <div class="card-dtls-rght">
-                        <img src="./images/carbon_location.svg" class="icons" alt="">
-                        <p>Azraq, Jordan</p>
+                            <img src="./images/carbon_location.svg" class="icons" alt="">
+                            <p>Azraq, Jordan</p>
                         </div>
                         <div class="card-dtls-left">
-                        <img src="./images/ph_clock.svg" class="icons" alt="">
-                        <p>5 Hrs</p>
+                            <img src="./images/ph_clock.svg" class="icons" alt="">
+                            <p>5 Hrs</p>
                         </div>
                     </div>
-                      <p>Group size: Min 6 - Max 20</p>
-                    </div>
+                    <p>Group size: Min 6 - Max 20</p>
                 </div>
             </div>
-
-            <div class="trip-button">
-                <a href="#">VIEW ALL TRIPS</a>
-            </div>
         </div>
+
+        <div class="trip-button">
+            <a href="#">VIEW ALL TRIPS</a>
+        </div>
+    </div>
+
+
+    <!-- GALLERY -->
+    <section class="gallery">
+        <h5 class="gallery-head">Gallery</h5>
+        <p class="gallery-p">See what we have captured</p>
+        
+    </section>
 
 </body>
 
