--- a/index.html
+++ b/index.html
@@ -100,9 +100,11 @@
         <div class="card-row-tripdetails">
             <div class="hiking-card">
                 <div>
-                    <a href="">
-                        <img src="./images/card-img-1.png" class="first-img" alt="">
-                    </a>
+                    <div class="transform-img">
+                        <a href="">
+                            <img src="./images/card-img-1.png" alt="">
+                        </a>
+                    </div>
                     <div class="card-flex">
                         <h5>Water buffalo & bird watching <br> trek</h5>
                         <div class="card-sec-p">Hiking</div> <br>
@@ -122,9 +124,11 @@
             </div>
             <div class="sea-card">
                 <div>
-                    <a href="">
-                        <img src="./images/card-img-2.png" class="second-img" alt="">
-                    </a>
+                    <div class="transform-img">
+                        <a href="">
+                            <img src="./images/card-img-2.png" class="second-img" alt="">
+                        </a>
+                    </div>
                     <div class="card-flex">
                         <h5>Scuba dive or snorkel the red <br> sea</h5>
                         <div class="card-sec-p">Sea safari</div> <br>
@@ -144,9 +148,11 @@
             </div>
             <div class="hiking-card">
                 <div>
-                    <a href="">
-                        <img src="./images/card-img-3.png" class="third-img" alt="">
-                    </a>
+                    <div class="transform-img">
+                        <a href="">
+                            <img src="./images/card-img-3.png" class="third-img" alt="">
+                        </a>
+                    </div>
                     <div class="card-flex">
                         <h5>Hike in the wild</h5>
                         <div class="card-sec-p-3">Hiking</div> <br>
@@ -176,7 +182,17 @@
     <section class="gallery">
         <h5 class="gallery-head">Gallery</h5>
         <p class="gallery-p">See what we have captured</p>
-        
+
+        <div class="gallery-imgs">
+            <div class="gallery-img-1">
+                <img src="./images/elephant.png" class="gallery-first-img" alt="">
+            </div>
+            <div class="gallery-img-2">
+                <img src="./images/Trecking.png" class="gallery-second-img" alt="">
+                <img src="./images/Tent.png" class="gallery-third-img" alt="">
+                <img src="./images/Ocean.png" class="gallery-forth-img" alt="">
+            </div>
+        </div>
     </section>
 
 </body>
