--- a/index.html
+++ b/index.html
@@ -184,14 +184,22 @@
         <p class="gallery-p">See what we have captured</p>
 
         <div class="gallery-imgs">
-            <div class="gallery-img-1">
-                <img src="./images/elephant.png" class="gallery-first-img" alt="">
+            <div class="items item-one">
+                <img src="./images/elephant.png" alt="">
             </div>
-            <div class="gallery-img-2">
-                <img src="./images/Trecking.png" class="gallery-second-img" alt="">
-                <img src="./images/Tent.png" class="gallery-third-img" alt="">
-                <img src="./images/Ocean.png" class="gallery-forth-img" alt="">
+            <div class="items item-two">
+                <img src="./images/Trecking.png" alt="">
             </div>
+            <div class="items item-three">
+                <img src="./images/Tent.png" alt="">
+            </div>
+            <div class="items item-four">
+                <img src="./images/Ocean.png" alt="">
+            </div>
+        </div>
+
+        <div class="gallery-button">
+            <a href="#">VIEW ALL</a>
         </div>
     </section>
 
